# magus

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLAUDISH_RELEASE_PROCESS.md  README.md  RELEASES.md  RELEASE_PROCESS.md  item-highlight.ts
.claude/: settings.json  (+2 more)
tools/claudeup-gui/src-tauri/: Cargo.toml  tauri.conf.json
tools/claudeup-gui/src-tauri/binaries/: claudeup-sidecar-aarch64-apple-darwin
tools/claudeup-gui/src-tauri/capabilities/: default.json
tools/claudeup-gui/src-tauri/icons/: icon.icns
tools/claudeup-gui/src-tauri/sidecar/: package-lock.json  package.json  tsconfig.json
tools/claudeup-gui/src-tauri/sidecar/src/: claudeup-core.d.ts  rpc-handler.ts  server.ts  types.ts
tools/claudeup-gui/src-tauri/src/: main.rs
tools/claudeup-gui/src-tauri/src/commands/: mod.rs
tools/claudeup-gui/src-tauri/src/sidecar/: lifecycle.rs  manager.rs  mod.rs
tools/design-eval/: README.md  VENDORED_FROM.md  pyproject.toml
tools/design-eval/examples/: custom_model.py  eval_anthropic.py  eval_openai.py  quick_start.py  run_anthropic.py  run_openai.py  run_trials.py
tools/design-eval/results/: report.json  report.md
tools/design-eval/results/article/: article.md  fetch_real_samples.py  generate_images.py  generate_test_examples.py
tools/design-eval/results/trials/: trial_results.json
tools/design-eval/results/trials_kimi_rerun/: trial_results.json
tools/design-eval/src/design_eval/: __init__.py  cli.py  config.py
tools/design-eval/src/design_eval/adapters/: __init__.py  anthropic_adapter.py  dummy_adapter.py  litellm_adapter.py  openai_adapter.py  openrouter_adapter.py  protocol.py
tools/design-eval/tests/: conftest.py  test_evaluators.py  test_loaders.py  test_metrics.py
(+1715 files in other folders)
